--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "accesscontrol": "^2.2.1",
+    "axios": "^0.24.0",
+    "base-64": "^1.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "moments": "0.0.2",
     "mongoose": "^6.0.4",
+    "mpesa-api": "^3.0.2",
+    "ngrok": "^4.2.2",
     "nodemon": "^2.0.12",
-    "pg": "^8.7.1"
-  }
+    "pg": "^8.7.1",
+    "unirest": "^0.6.0"
+  },
+  "devDependencies": {}
 }
